@@ -112,11 +112,7 @@ unix{
 win32{
 	DEFINES += RT_MIDI_H=\\\"RtMidi.h\\\"
 	#change these before building...
-    LIBS += e:/libs/fluidsynth/libfluidsynth.dll.a winmm.lib
-	Release:LIBS += e:/libs/rtmidi/rtmidi.lib
-	Debug:LIBS += e:/libs/rtmidi/rtmidid.lib
-	INCLUDEPATH += e:/libs/fluidsynth/include
-	INCLUDEPATH += e:/libs/rtmidi
+	LIBS += -lfluidsynth -lwinmm -lRtMidi
 	RC_FILE = qmidiplayer.rc
 }
 RESOURCES     = resources.qrc
