@@ -1,3 +1,8 @@
+2019-01-24 0.8.6 alpha
+Migrated to fluidsynth 2.x.
+Moved to mxe for Windows build.
+Fixed default value for CC#8.
+
 2018-10-02 0.8.6 alpha
 Fixed layout with Qt 5.11.
 Minor code cleanups in qmpchannelswindow.
